k8s_files/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-example
  name: node-example
  namespace: default
spec:
  clusterIP: 10.102.242.244
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: node-example
  sessionAffinity: None
  type: ClusterIP
